refactor: api -> handlers, models
